# ELTerm

./: .gitignore  LICENSE
firmware/: CMakeLists.txt  README.md  el.c  el.h  eldata.pio  font.h  graphics.c  graphics.h  main.c  serial.c  serial.h  termcore.c  termcore.h  terminal.c  terminal.h  tusb_config.h  usbhid.c  usbhid.h
firmware/pc/: Makefile  pcmain.c  pico_stdlib.c  serial.c  tusb.h
firmware/pc/pico/: stdlib.h
firmware/tests/: Makefile  test_basic_escape.h  test_basics.h  test_csi.h  test_modes.h  testmain.c  tests.h
hardware/: ELTerm.kicad_pcb  ELTerm.kicad_prl  ELTerm.kicad_pro  ELTerm.kicad_sch  symbols.kicad_sym
hardware/footprints.pretty/: RPi_Pico_SMD_TH.kicad_mod
